tests-integration/tests/custom/syntax-error/missing-keyword/stderr.expected
Error: model.eprime:1:8:
  |
1 | find x int
  |        ^
Missing :


